--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,9 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  {%- if page.title? -%}
+    <title>{{ page.title }} | {{ site.title }}</title>
+  {%- else -%}
+    <title>{{ site.title }} | {{site.shortdesc}}</title>
+  {%- endif -%}
 </head>
