--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-{%- if page.title? -%}
+{%- if page.title -%}
   <title>{{ page.title }} | {{ site.title }}</title>
 {%- else -%}
   <title>{{ site.title }} | {{site.shortdesc}}</title>
