--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,23 +7,12 @@
     <!--<h2 class="footer-heading">{{ site.title | escape }}</h2>-->
 
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-          </li>
-        </ul>
-      </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="col-md-6">
         {%- include social.html -%}
       </div>
 
-      <div class="footer-col footer-col-3">
+      <div class="col-md-6">
         <p>{{- site.description | escape -}}</p>
       </div>
     </div>
