--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,15 +1,15 @@
 <ul class="social-media-list">
   {%- if site.email -%}<li><a class="u-email" href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i><span>{{ site.email }}</span></a></li>{%- endif -%}
   
-  {%- if site.github_username -%}<li><a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><i class="fa fa-github"></i><span class="username">{{ site.github_username| escape }}</span></a></li>{%- endif -%}
+  {%- if site.github_username -%}<li><a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><i class="fab fa-github"></i><span class="username">{{ site.github_username| escape }}</span></a></li>{%- endif -%}
   
   {%- if site.linkedin_username -%}<li><a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username| escape }}</span></a></li>{%- endif -%}
   
   {%- for mst in site.mastodon -%}{%- if mst.username and mst.instance -%}<li><a href="https://{{ mst.instance| cgi_escape | escape}}/@{{mst.username}}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#mastodon' | relative_url }}"></use></svg> <span class="username">{{ mst.username|escape }}</span></a></li>{%- endif -%}{%- endfor -%}
   
-  {%- if site.twitter and site.twitter.username -%}<li><a href="https://www.twitter.com/{{ site.twitter_username| cgi_escape | escape }}"><i class="fa fa-twitter"></i><span class="username">{{ site.twitter_username| escape }}</span></a></li>{%- endif -%}
+  {%- if site.twitter and site.twitter.username -%}<li><a href="https://www.twitter.com/{{ site.twitter_username| cgi_escape | escape }}"><i class="fab fa-twitter"></i><span class="username">{{ site.twitter_username| escape }}</span></a></li>{%- endif -%}
   
-  {%- if site.youtube_username -%}<li><a href="https://youtube.com/{{ site.youtube_username| cgi_escape | escape }}"><i class="fa fa-youtube"></i><span class="username">{{ site.youtube_username| escape }}</span></a></li>{%- endif -%}
+  {%- if site.youtube_username -%}<li><a href="https://youtube.com/{{ site.youtube_username| cgi_escape | escape }}"><i class="fab fa-youtube"></i><span class="username">{{ site.youtube_username| escape }}</span></a></li>{%- endif -%}
   
   {%- if site.rss -%}<li><a href="{{ 'feed.xml' | relative_url }}"><i class="fa fa-rss"></i><span>{{ site.rss | escape }}</span></a></li>{%- endif -%}
 </ul>
