--- a/assets/extras.css
+++ b/assets/extras.css
@@ -1,4 +1,24 @@
-.social-media-list .fa {
+/* latin-ext */
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(/assets/Jost-SemiBoldlatinext.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(/assets/Jost-SemiBoldlatin.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+.social-media-list .fa, .social-media-list .fab {
     padding-right: 5px;
     color: #828282;
 }
@@ -6,6 +26,7 @@
 .site-nav .page-link {
     padding: 8px 10px;
     margin: 0px !important;
+    display: inline-block;
 }
 
 .site-nav .page-link:hover {
