--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
   {%- if site.posts.size > 0 -%}
     <h2 class="post-list-heading">Latest blog posts</h2>
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      {% for i in 0..2 %}
+      {% for i in (0..2) %}
         {%- assign post = site.posts[i] -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
         <h3>
