--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="/images/furfelv3.jpg" />
+  <meta property="og:image" content="https://furfel.com/images/furfelv3.jpg" />
   
 {%- if page.title -%}
   <title>{{ page.title }} | {{ site.title }}</title>
