Added more info on cookies

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 </footer>
 <div id="cookies">
 	<h5>This website uses cookies <span class="btnok" onclick="close_cookies(true)">I&apos;m ok with that</span> </h5>
-	<p>By continuing you agree for the cookies to be stored in your browser and that your computer will use energy to browse this website. Also remember carbon footprint and to eat your vegetables.</p>
+	<p>By continuing you agree for the cookies to be stored in your browser and that your computer will use energy to browse this website. Also remember carbon footprint and to eat your vegetables. None of them use any marketing, thrid-party tracking. It's just nature of modern technology. f.e.u.</p>
 	<noscript>Without JS you cannot close this message.</noscript>
 	<script type="text/javascript">
 		function close_cookies(addCookie) {if(addCookie) document.cookie = "agreed_to_cookies=true; path=/; max-age=31536000"; document.getElementById("cookies").remove();}
