--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
 
       <div class="col-md-6">
         <p>{{- site.description | escape -}}</p>
+	<a href="">Impressum</a>
       </div>
     </div>
 
