--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
       <div class="col-md-6">
         <p>{{- site.description | escape -}}</p>
-	<a href="">Impressum</a>
+	<a href="https://docs.google.com/document/d/1lx7Ea7Ui9sl9JI2143RheOW9RAIR_mu-GLjxVw9qIEs/pub">Impressum</a>
       </div>
     </div>
 
